[gd_scene load_steps=45 format=3 uid="uid://blxk7ghqxh3n"]

[ext_resource type="Script" path="res://scripts/dungeon.gd" id="1_ir1j1"]
[ext_resource type="Script" path="res://scripts/dungeon_piece.gd" id="2_s6t57"]
[ext_resource type="Resource" uid="uid://o0gnk3x653sw" path="res://resources/pieces/forest1.tres" id="3_y8usp"]
[ext_resource type="Resource" uid="uid://c8dlm87nxyjxi" path="res://resources/pieces/forest2.tres" id="4_4khr6"]
[ext_resource type="Resource" uid="uid://cy4fu05kegwmm" path="res://resources/pieces/forest3.tres" id="5_gnay0"]
[ext_resource type="Resource" uid="uid://df7b3m1bx7tli" path="res://resources/pieces/forest4.tres" id="6_jlcbe"]
[ext_resource type="Resource" uid="uid://chn63q12p0yna" path="res://resources/pieces/forest5.tres" id="7_bs1gc"]
[ext_resource type="Resource" uid="uid://cqwofbsdw4ry5" path="res://resources/pieces/forest6.tres" id="8_uterv"]
[ext_resource type="Resource" uid="uid://d0ckjafue1h30" path="res://resources/pieces/forest7.tres" id="9_p7kd6"]
[ext_resource type="Resource" uid="uid://6y5m51q1t2og" path="res://resources/pieces/forest8.tres" id="10_gk15q"]
[ext_resource type="Resource" uid="uid://bw4blcwer371h" path="res://resources/pieces/cave_enterance.tres" id="11_wj0yf"]
[ext_resource type="Resource" uid="uid://brwb7uuxytqfs" path="res://resources/pieces/cave1.tres" id="12_efagm"]
[ext_resource type="Resource" uid="uid://dgt8u01ywpu7q" path="res://resources/pieces/cave2.tres" id="13_ipf17"]
[ext_resource type="Resource" uid="uid://cqr2c4ac6n2p7" path="res://resources/pieces/cave3.tres" id="14_nujub"]
[ext_resource type="Resource" uid="uid://ddrkk57020uq6" path="res://resources/pieces/cave_exit.tres" id="15_a0ljc"]
[ext_resource type="Theme" uid="uid://kajgygmrg8c1" path="res://resources/dungeon_theme.tres" id="16_fof1p"]
[ext_resource type="Texture2D" uid="uid://cx1bukm1axksr" path="res://assets/icons/path_left_pressed.png" id="17_yye6x"]
[ext_resource type="Texture2D" uid="uid://dpbcwatgk7mdl" path="res://assets/icons/path_left.png" id="18_gr8nb"]
[ext_resource type="Script" path="res://scripts/button.gd" id="19_ggbtf"]
[ext_resource type="Texture2D" uid="uid://wxxksgh6pbce" path="res://assets/icons/path_right_pressed.png" id="20_jv3ro"]
[ext_resource type="Texture2D" uid="uid://ci1swso71e1vt" path="res://assets/icons/path_right.png" id="21_8qayh"]
[ext_resource type="Texture2D" uid="uid://dw2fenvoit5e0" path="res://assets/icons/path_up_pressed.png" id="22_emw6h"]
[ext_resource type="Texture2D" uid="uid://coks15k7ll6tq" path="res://assets/icons/path_up.png" id="23_gkv3s"]
[ext_resource type="Script" path="res://scripts/character.gd" id="24_1yloq"]
[ext_resource type="Script" path="res://scripts/chest.gd" id="26_qjpaq"]
[ext_resource type="Texture2D" uid="uid://bt4naqx7wt7v3" path="res://assets/old_sprites/chest1.png" id="27_3yv6q"]
[ext_resource type="PackedScene" uid="uid://bnw427kbfkixh" path="res://scenes/hero.tscn" id="28_fxl00"]
[ext_resource type="Script" path="res://scripts/hero_team.gd" id="28_n6hfe"]
[ext_resource type="Script" path="res://scripts/combat.gd" id="28_y64no"]
[ext_resource type="Script" path="res://scripts/game_over.gd" id="30_kcrms"]
[ext_resource type="Resource" uid="uid://11jhqf8gmu8s" path="res://resources/heroes/plague_doctor.tres" id="30_xqbyd"]
[ext_resource type="Resource" uid="uid://cnommwqikoway" path="res://resources/heroes/hellion.tres" id="31_65sem"]
[ext_resource type="Resource" uid="uid://cdhn4jwwrukiv" path="res://resources/heroes/highway_man.tres" id="32_6obck"]
[ext_resource type="Resource" uid="uid://c0ahf34dnidlc" path="res://resources/heroes/leper.tres" id="33_upjx8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jxrpi"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cqrnr"]
texture = ExtResource("17_yye6x")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u5jxq"]
texture = ExtResource("18_gr8nb")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ythkp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1uxyf"]
texture = ExtResource("20_jv3ro")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vibsr"]
texture = ExtResource("21_8qayh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q4e8p"]
texture = ExtResource("22_emw6h")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y28t7"]
texture = ExtResource("23_gkv3s")

[sub_resource type="SystemFont" id="SystemFont_4in4j"]
font_names = PackedStringArray("OCR A")
oversampling = 10.0

[sub_resource type="Theme" id="Theme_27bd0"]
Label/fonts/font = SubResource("SystemFont_4in4j")

[node name="Game" type="Node"]

[node name="Dungeon" type="Node" parent="."]
script = ExtResource("1_ir1j1")
forest_pieces = Array[ExtResource("2_s6t57")]([ExtResource("3_y8usp"), ExtResource("4_4khr6"), ExtResource("5_gnay0"), ExtResource("6_jlcbe"), ExtResource("7_bs1gc"), ExtResource("8_uterv"), ExtResource("9_p7kd6"), ExtResource("10_gk15q"), ExtResource("11_wj0yf")])
cave_pieces = Array[ExtResource("2_s6t57")]([ExtResource("12_efagm"), ExtResource("13_ipf17"), ExtResource("14_nujub"), ExtResource("15_a0ljc")])

[node name="CanvasLayer" type="CanvasLayer" parent="Dungeon"]
visible = false

[node name="Control" type="Control" parent="Dungeon/CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("16_fof1p")

[node name="DungeonBackground" type="TextureRect" parent="Dungeon/CanvasLayer/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftButton" type="Button" parent="Dungeon/CanvasLayer/Control" node_paths=PackedStringArray("path_icon")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 25.0
offset_top = -50.0
offset_right = 125.0
offset_bottom = 50.0
grow_vertical = 2
pivot_offset = Vector2(50, 50)
theme_override_styles/disabled = SubResource("StyleBoxEmpty_jxrpi")
theme_override_styles/hover = SubResource("StyleBoxTexture_cqrnr")
theme_override_styles/pressed = SubResource("StyleBoxTexture_cqrnr")
theme_override_styles/normal = SubResource("StyleBoxTexture_u5jxq")
text = "left"
icon_alignment = 1
expand_icon = true
script = ExtResource("19_ggbtf")
path_icon = NodePath("../LeftIcon")

[node name="RightButton" type="Button" parent="Dungeon/CanvasLayer/Control" node_paths=PackedStringArray("path_icon")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -50.0
offset_right = -25.0
offset_bottom = 50.0
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(50, 50)
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ythkp")
theme_override_styles/hover = SubResource("StyleBoxTexture_1uxyf")
theme_override_styles/pressed = SubResource("StyleBoxTexture_1uxyf")
theme_override_styles/normal = SubResource("StyleBoxTexture_vibsr")
text = "left"
icon_alignment = 1
expand_icon = true
script = ExtResource("19_ggbtf")
path_icon = NodePath("../RightIcon")

[node name="UpButton" type="Button" parent="Dungeon/CanvasLayer/Control" node_paths=PackedStringArray("path_icon")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 25.0
offset_right = 50.0
offset_bottom = 125.0
grow_horizontal = 2
pivot_offset = Vector2(50, 50)
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ythkp")
theme_override_styles/hover = SubResource("StyleBoxTexture_q4e8p")
theme_override_styles/pressed = SubResource("StyleBoxTexture_q4e8p")
theme_override_styles/normal = SubResource("StyleBoxTexture_y28t7")
text = "left"
icon_alignment = 1
expand_icon = true
script = ExtResource("19_ggbtf")
path_icon = NodePath("../UpIcon")

[node name="LeftIcon" type="TextureRect" parent="Dungeon/CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -415.0
offset_top = 115.0
offset_right = -289.0
offset_bottom = 241.0
grow_horizontal = 2
mouse_filter = 2
expand_mode = 1

[node name="RightIcon" type="TextureRect" parent="Dungeon/CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 289.0
offset_top = 115.0
offset_right = 415.0
offset_bottom = 241.0
grow_horizontal = 2
mouse_filter = 2
expand_mode = 1

[node name="UpIcon" type="TextureRect" parent="Dungeon/CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -63.0
offset_top = -405.0
offset_right = 63.0
offset_bottom = -279.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
expand_mode = 1

[node name="ColorScreen" type="CanvasLayer" parent="Dungeon"]
layer = 5

[node name="ColorScreen" type="ColorRect" parent="Dungeon/ColorScreen"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.129412, 0.129412, 0.129412, 1)

[node name="Character" type="Node" parent="."]
script = ExtResource("24_1yloq")

[node name="Chest" type="Node" parent="." node_paths=PackedStringArray("character", "dungeon")]
script = ExtResource("26_qjpaq")
character = NodePath("../Character")
dungeon = NodePath("../Dungeon")

[node name="CanvasLayer" type="CanvasLayer" parent="Chest"]
visible = false

[node name="ChestButton" type="Button" parent="Chest/CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -54.0
offset_right = 54.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("27_3yv6q")

[node name="Combat" type="Node" parent="."]
script = ExtResource("28_y64no")

[node name="Combat" type="Node2D" parent="Combat"]
z_index = 5
position = Vector2(427, 225)

[node name="PlayerTeam" type="Node2D" parent="Combat/Combat"]
unique_name_in_owner = true
position = Vector2(-75, 0)
script = ExtResource("28_n6hfe")

[node name="Hero" parent="Combat/Combat/PlayerTeam" instance=ExtResource("28_fxl00")]
hero = ExtResource("30_xqbyd")

[node name="EnemyTeam" type="Node2D" parent="Combat/Combat"]
unique_name_in_owner = true
position = Vector2(75, 0)
script = ExtResource("28_n6hfe")
team_type = 1

[node name="Hero" parent="Combat/Combat/EnemyTeam" instance=ExtResource("28_fxl00")]
hero = ExtResource("31_65sem")

[node name="Hero2" parent="Combat/Combat/EnemyTeam" instance=ExtResource("28_fxl00")]
position = Vector2(85, 0)
hero = ExtResource("32_6obck")

[node name="Hero3" parent="Combat/Combat/EnemyTeam" instance=ExtResource("28_fxl00")]
position = Vector2(170, 0)
hero = ExtResource("33_upjx8")

[node name="Hero4" parent="Combat/Combat/EnemyTeam" instance=ExtResource("28_fxl00")]
position = Vector2(255, 0)
hero = ExtResource("33_upjx8")

[node name="CanvasLayer" type="CanvasLayer" parent="Combat"]

[node name="Control" type="Control" parent="Combat/CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_27bd0")

[node name="TurnPanel" type="Panel" parent="Combat/CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -130.0
offset_top = 10.0
offset_right = 130.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="TurnDisplay" type="HBoxContainer" parent="Combat/CanvasLayer/Control/TurnPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlayerPanel" type="Panel" parent="Combat/CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -145.0
offset_right = 522.0
offset_bottom = -5.0
grow_vertical = 0

[node name="PlayerHeroName" type="Label" parent="Combat/CanvasLayer/Control/PlayerPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 155.0
offset_bottom = 28.0
theme_override_font_sizes/font_size = 25
text = "Hero Name"
vertical_alignment = 1

[node name="Health" type="Control" parent="Combat/CanvasLayer/Control/PlayerPanel"]
anchors_preset = 0
offset_left = 5.0
offset_top = 35.0
offset_right = 146.0
offset_bottom = 60.0

[node name="PlayerHeroHealth" type="Label" parent="Combat/CanvasLayer/Control/PlayerPanel/Health"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 150.0
offset_bottom = 11.5
grow_vertical = 2
text = "Health:"
vertical_alignment = 1

[node name="PlayerHeroHealthDisplay" type="Label" parent="Combat/CanvasLayer/Control/PlayerPanel/Health"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "25/25"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Defence" type="Control" parent="Combat/CanvasLayer/Control/PlayerPanel"]
anchors_preset = 0
offset_left = 5.0
offset_top = 55.0
offset_right = 146.0
offset_bottom = 80.0

[node name="PlayerHeroDefence" type="Label" parent="Combat/CanvasLayer/Control/PlayerPanel/Defence"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 150.0
offset_bottom = 11.5
grow_vertical = 2
text = "Defence:"
vertical_alignment = 1

[node name="PlayerHeroDefenceDisplay" type="Label" parent="Combat/CanvasLayer/Control/PlayerPanel/Defence"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "20%"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Speed" type="Control" parent="Combat/CanvasLayer/Control/PlayerPanel"]
anchors_preset = 0
offset_left = 5.0
offset_top = 75.0
offset_right = 146.0
offset_bottom = 100.0

[node name="PlayerHeroSpeed" type="Label" parent="Combat/CanvasLayer/Control/PlayerPanel/Speed"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 150.0
offset_bottom = 11.5
grow_vertical = 2
text = "Speed:"
vertical_alignment = 1

[node name="PlayerHeroSpeedDisplay" type="Label" parent="Combat/CanvasLayer/Control/PlayerPanel/Speed"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "7"
horizontal_alignment = 2
vertical_alignment = 1

[node name="AttacksPanel" type="Panel" parent="Combat/CanvasLayer/Control/PlayerPanel"]
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -255.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -85.0
grow_horizontal = 0
grow_vertical = 2

[node name="EnemyPanel" type="Panel" parent="Combat/CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -327.0
offset_top = -145.0
offset_right = -10.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0

[node name="EnemyHeroName" type="Label" parent="Combat/CanvasLayer/Control/EnemyPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 155.0
offset_bottom = 28.0
text = "Hero Name"
vertical_alignment = 1

[node name="Health" type="Control" parent="Combat/CanvasLayer/Control/EnemyPanel"]
layout_mode = 3
anchors_preset = 0
offset_left = 5.0
offset_top = 35.0
offset_right = 146.0
offset_bottom = 60.0

[node name="EnemyHeroHealth" type="Label" parent="Combat/CanvasLayer/Control/EnemyPanel/Health"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 150.0
offset_bottom = 11.5
grow_vertical = 2
text = "Health:"
vertical_alignment = 1

[node name="EnemyHeroHealthDisplay" type="Label" parent="Combat/CanvasLayer/Control/EnemyPanel/Health"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "25/25"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Defence" type="Control" parent="Combat/CanvasLayer/Control/EnemyPanel"]
layout_mode = 3
anchors_preset = 0
offset_left = 5.0
offset_top = 55.0
offset_right = 146.0
offset_bottom = 80.0

[node name="EnemyHeroDefence" type="Label" parent="Combat/CanvasLayer/Control/EnemyPanel/Defence"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 150.0
offset_bottom = 11.5
grow_vertical = 2
text = "Defence:"
vertical_alignment = 1

[node name="EnemyHeroDefenceDisplay" type="Label" parent="Combat/CanvasLayer/Control/EnemyPanel/Defence"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "20%"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Speed" type="Control" parent="Combat/CanvasLayer/Control/EnemyPanel"]
layout_mode = 3
anchors_preset = 0
offset_left = 5.0
offset_top = 75.0
offset_right = 146.0
offset_bottom = 100.0

[node name="EnemyHeroSpeed" type="Label" parent="Combat/CanvasLayer/Control/EnemyPanel/Speed"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 150.0
offset_bottom = 11.5
grow_vertical = 2
text = "Speed:"
vertical_alignment = 1

[node name="EnemyHeroSpeedDisplay" type="Label" parent="Combat/CanvasLayer/Control/EnemyPanel/Speed"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "7"
horizontal_alignment = 2
vertical_alignment = 1

[node name="GameOver" type="Node" parent="."]
script = ExtResource("30_kcrms")

[node name="CanvasLayer" type="CanvasLayer" parent="GameOver"]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 1)

[node name="Label" type="Label" parent="GameOver/CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -65.0
offset_right = 120.0
offset_bottom = 10.0002
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 45
text = "game over!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="Button" parent="GameOver/CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.0
offset_top = 10.0
offset_right = -27.0
offset_bottom = 55.0001
grow_horizontal = 2
grow_vertical = 2
text = "quit"

[node name="RestardButton" type="Button" parent="GameOver/CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 23.0
offset_top = 10.0
offset_right = 123.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
text = "restard"
